2016-05-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Use dtimeout for the
	  timeout

2016-05-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (debug_pgets): New function to read a complete
	  line from a FILE*
	* common-src/file.h (debug_pgets, pgets): Add prototypes
	* common-src/amxml.c: Undo previous patch, use pgets instead of agets
	* application-src/amstar.c, client-src/client_util.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c, common-src/krb5-security.c,
	   common-src/security-util.c,
	  common-src/util.c, recover-src/extract_list.c,
	  server-src/amcheck.c, server-src/amindexd.c,
	  server-src/dumper.c: Use pgets instead of agets to read many files

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amxml.c (amxml_format_tag): The '#' character require raw
	  format

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/holding.c: Accept level up to DUMP_LEVELS

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/client_util.c: Improve parsing of estimate scripts
	* client-src/sendsize.c: Fail estimate if script fail
	* server-src/planner.c: continue parsing after ERROR line

2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix AWS4 auth-string

2016-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Orion Poplawski
	* server-src/amvault.pl: Fix condition  for level with incrs_only

2016-05-04  Dustin J. Mitchell <dustin@mozilla.com>
	* man/xml-source/amanda-auth.7.xml: Improve doc

2016-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/client_util.c (run_client_scripts): return the exit
	  status of the scripts
	* client-src/client_util.h (run_client_scripts): Change return type to
	  int
	* client-src/sendbackup.c: Do not run the application if a
	  PRE-DLE-BACKUP script failed
