@@ -1,4 +1,8 @@
-2016-05-24  Jean-Louis Martineau <JMartineau@carbonite.com>
+2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/amxml.c, common-src/file.c: Remove superflous debugging
+	  statements
+
+2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* xfer-src/element-glue.c (do_directtcp_accept): Use dtimeout for the
 	  timeout
 
